--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -65,9 +64,9 @@
 			<div class="row">
 				<div class="span6 alignright flyLeft">
 					<blockquote class="large">
-						In three words I can sum up everything I’ve learned about life: it goes on.” <cite> Robert Frost</cite>						
+						The secret of getting ahead is getting started <cite> Mark Twain</cite>						
 					</blockquote>
-					<p> One of my favorite quotes of all time because it will make a sad person hopeful, and a happy person anxious </p>
+					<p> One of my favorite quotes of all time </p>
 				</div>
 				
 				<div class="span6 aligncenter flyRight">
