--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<blockquote class="large">
 						The secret of getting ahead is getting started <cite> Mark Twain</cite>						
 					</blockquote>
-					<p> One of my favorite quotes of all time </p>
+					<p> Quote that keeps me motivated </p>
 				</div>
 				
 				<div class="span6 aligncenter flyRight">
