social media links

--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 			<div class="row">
 				<div class="span6 offset3">
 					<ul class="social-networks">
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-linkedin icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-github icon-2x"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/darshal/"><i class="icon-circled icon-bgdark icon-linkedin icon-2x"></i></a></li>
+						<li><a href="https://github.com/darshalshah"><i class="icon-circled icon-bgdark icon-github icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-file icon-2x"></i></a></li>
 						
 					</ul>
