--- a/index.html
+++ b/index.html
@@ -39,21 +39,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="span12">
-						<div id="main-flexslider" class="flexslider">
-							<ul class="slides">
-								<li>
 									<p class="home-slide-content">
 										Welcome to my page!
 									</p>
-								</li>
-								<li>
-									<p class="home-slide-content">
-										Scroll down to see more!
-									</p>
-								</li>
-								
-							</ul>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -91,7 +79,7 @@
 				</div>
 				<div class="span6">
 					<div class="aligncenter">
-						<img src="img/icons/creativity.png" alt="Maine Trip" style="width:325px;height:600px;"  />
+						<img src="img/icons/creativity.jpg" alt="Personal pic" style="width:325px;height:650px;"  />
 					</div>
 				</div>
 			</div>
@@ -265,12 +253,10 @@
 				<div class="span6 offset3">
 					<ul class="social-networks">
 						<li><a href="https://www.linkedin.com/in/darshal/"><i class="icon-circled icon-bgdark icon-linkedin icon-2x"></i></a></li>
-						<li><a href="https://github.com/darshalshah"><i class="icon-circled icon-bgdark icon-github icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-file icon-2x"></i></a></li>
-						
+						<li><a href="https://github.com/darshalshah"><i class="icon-circled icon-bgdark icon-github icon-2x"></i></a></li>						
 					</ul>
 					<p class="Ending">
-					 Darshal Shah	
+					 Darshal Shah
 					</p>
 				</div>
 			</div>
