--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Darshal Shah's Personal Website</title>
+	<title>Darshal Shah's webpage</title>
 	<link rel="icon" href="icon.jpg">
 
 
